<resources>
    <string name="by_app_name">Biyue</string>
    <string name="by_login">登录</string>
    <string name="by_register">注册</string>
    <string name="by_text_account">请输入手机号码/账号</string>
    <string name="by_text_register">请输入手机号码</string>
    <string name="by_text_pwd">请输入6-15位字母或数字</string>
    <string name="by_login_one">一键登录</string>
    <string name="by_forget_pwd">忘记密码></string>
    <string name="by_login_other">其他登录</string>
    <string name="by_text_verification">请输入验证码</string>
    <string name="by_send_verification">发送验证码</string>
    <string name="by_text_confirm_pwd">请再次输入密码</string>
    <string name="by_text_bind">绑定手机</string>
    <string name="by_text_next">下一步</string>
    <string name="by_text_finish">完成</string>
    <string name="by_text_confirm">确定</string>
    <string name="by_return_login">返回登录</string>
    <string name="by_return_text">返回</string>
    <string name="by_text_skip">下次再说</string>
    <string name="by_text_charge">账号充值</string>
    <string name="by_text_switch">切换账号</string>
    <string name="by_text_take_back">收回菜单</string>
    <string name="by_text_money">输入充值金额</string>
    <string name="by_text_pay">跳转支付</string>
    <string name="by_text_logout">退出登录</string>
    <string name="by_text_test">测试</string>
</resources>
