<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/by_bg_dialog"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="41.5dp"
            android:background="@drawable/by_logo_biyue"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32.5dp"
        android:background="@color/by_bg_gray"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/by_spacing_smallest"
        android:paddingRight="@dimen/by_spacing_smallest"
        android:layout_marginTop="@dimen/by_spacing_bigger">
        
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/by_icon_person"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/by_edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/by_font_small"
            android:textColor="@color/by_text_black"
            android:inputType="number"
            android:hint="@string/by_text_register"
            android:textColorHint="@color/by_text_gary"
            android:background="@drawable/by_bg_edit_trans"
            android:lines="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32.5dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/by_spacing_smaller"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/by_spacing_smallest"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/by_bg_layout_ingray_midcorner"
            >

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/by_icon_key"
                android:layout_marginRight="@dimen/by_spacing_smaller"/>

            <EditText
                android:id="@+id/by_edit_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/by_font_small"
                android:textColor="@color/by_text_black"
                android:hint="@string/by_text_verification"
                android:textColorHint="@color/by_text_gary"
                android:background="@drawable/by_bg_edit_trans"
                android:inputType="number"
                android:lines="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                />

        </LinearLayout>

        <com.example.rungame10.biyue.View.CountdownButton
            android:id="@+id/by_btn_verification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/by_bg_btn_main_color_midcorner"
            android:text="@string/by_send_verification"
            android:textSize="@dimen/by_font_small"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/by_white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32.5dp"
        android:background="@drawable/by_bg_layout_ingray"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/by_spacing_smallest"
        android:paddingRight="@dimen/by_spacing_smallest"
        android:layout_marginTop="@dimen/by_spacing_smaller"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/by_icon_log"
            android:layout_marginRight="@dimen/by_spacing_smaller"/>

        <EditText
            android:id="@+id/by_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/by_font_small"
            android:textColor="@color/by_text_black"
            android:hint="@string/by_text_pwd"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textColorHint="@color/by_text_gary"
            android:background="@drawable/by_bg_edit_trans"
            android:lines="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/by_btn_register"
        android:layout_width="match_parent"
        android:layout_height="32.5dp"
        android:gravity="center"
        android:background="@drawable/by_bg_btn_main_color"
        android:text="@string/by_register"
        android:textColor="@color/by_white"
        android:textSize="@dimen/by_font_large"
        android:layout_marginTop="@dimen/by_spacing_smaller"
        />

    <TextView
        android:id="@+id/by_btn_return"
        android:layout_width="match_parent"
        android:layout_height="32.5dp"
        android:gravity="center"
        android:background="@drawable/by_bg_btn_white"
        android:text="@string/by_return_login"
        android:textColor="@color/by_main_color"
        android:textSize="@dimen/by_font_large"
        android:layout_marginTop="@dimen/by_spacing_smaller"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>
